2023-05-18_okd_digiteq/day1/kube/01_pod2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod-2
  labels:
    app: simple-hello-world
    svc: example
spec:
  containers:
    - name: main
      image: ondrejsika/training-example-foo
      ports:
        - containerPort: 80
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
