2023-05-18_okd_digiteq/day1/kube/daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hello-world
  labels:
    app: hello-world-ds
spec:
  selector:
    matchLabels:
      app: hello-world-ds
  template:
    metadata:
      labels:
        app: hello-world-ds
        svc: example
    spec:
      containers:
        - name: hello-world
          image: ondrejsika/training-example-okd
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
