2023-05-18_okd_digiteq/day1/kube/nodename.yml
apiVersion: v1
kind: Pod
metadata:
  name: nodename
spec:
  nodeName: ip-10-0-167-111.eu-central-1.compute.internal
  containers:
    - name: hello
      image: ondrejsika/training-example
      resources:
        requests:
          memory: 10Mi
          cpu: 10m
        limits:
          memory: 20Mi
          cpu: 20m
