2023-05-18_okd_digiteq/day1/kube/05_clusterip_service.yml
apiVersion: v1
kind: Service
metadata:
  name: clusterip
spec:
  type: ClusterIP
  selector:
    app: example-okd
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: metrics
      port: 8080
      targetPort: metrics
