2023-05-18_okd_digiteq/day1/kube/06_nodeport_service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeport
spec:
  type: NodePort
  externalTrafficPolicy: Cluster
  # externalTrafficPolicy: Local
  selector:
    app: example-okd
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      # nodePort is optional (30000-32767)
      nodePort: 31001
