2023-05-18_okd_digiteq/day1/kube/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: example-okd
  ports:
    - port: 80
      targetPort: http
