2023-05-18_okd_digiteq/day1/kube/statefulset24_1.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world-sts
spec:
  clusterIP: None
  selector:
    app: hello-world-sts
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: hello-world
spec:
  serviceName: hello-world
  selector:
    matchLabels:
      app: hello-world-sts
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-world-sts
        svc: example
    spec:
      containers:
        - name: main
          image: ondrejsika/training-example-okd
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              memory: 20Mi
              cpu: 20m
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
